# OwlTesterService

./: .dockerignore  .env.example  .gitignore  .replit  CLAUDE.md  Dockerfile  OwlTesterVPSinstructions.txt  README.md  README_REASONING.md  SPEC-bfo-clif-background.md  SPEC-owltester.md  api_key_utils.py  app.py  app.py.bak  app.py.generator  app.py.new  bfo_2020_definitions.py  bfo_lint.py  bvss_model.py  bvss_validator.py  clif_lexer.py  clif_theory.py  curl_output.txt  deploy.md  docker-compose.yml  external_reasoner.py  fol_export.py  fol_input.py  gunicorn.conf.py  improved_openai_utils.py  migrate_db.py  migrate_db_coherence.py  migrate_db_prover.py  migrate_db_transparency.py  migrate_file_history.py  models.py  ontology_fixer.py  openai_utils.py  owl_format_detector.py  owl_preprocessor.py  (+13 more)
attached_assets/: Pasted--Overview-BVSS-Visualizer-Integration-for-OWL-Ontologies-Architecture-Components-Layer-Tool-Te-1748472160435.txt  Pasted-05-04-04-59-11-53-9ea2a6a7-User-2025-05-04-04-59-11-53-9ea2a-1746356916416.txt  Pasted-A-General-Visual-Language-for-Basic-Formal-Ontology-I-Purpose-The-BFO-Visual-Syntax-System-BVS-1748480512321.txt  Pasted-BFO-Visual-Syntax-System-BVSS-A-General-Visual-Language-for-Basic-Formal-Ontology-I-Purpose-T-1748480020237.txt  Pasted-Error-analyzing-OWL-file-psycopg2-errors-UndefinedColumn-column-ontology-analysis-class-list-does-1746988720657.txt  Pasted-Error-importing-file-to-sandbox-psycopg2-errors-NotNullViolation-null-value-in-column-ontology-i-1747255539418.txt  corporate_ontology_1751555291443.owl  (+7 more)
bfo/: VERSION  __init__.py  (+4 more)
(+86 files in other folders)
