[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-uploads>=0.2.1",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "nltk>=3.9.1",
    "owlready2>=0.47",
    "psycopg2-binary>=2.9.10",
    "openai>=1.76.2",
    "plantuml>=0.3.0",
    "six>=1.17.0",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "rdflib>=7.1.4",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
    "trafilatura>=2.0.0",
]
